# velo

./: LICENSE  Makefile  Velo-documentation.html  docker-compose.yml  readme.md
.github/workflows/: release-apk.yml
api/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  sample.env
api/api/: router.py  static.py
api/api/private/: __init__.py  car.py  expense.py  fuel.py  odometer.py  service.py  supply.py  sync.py
api/api/public/: __init__.py  auth.py
api/app/: main.py
api/app/core/: config.py  database.py  email.py  jwt.py  password_utils.py
api/app/utils/: flags.py  redis.py  reminders.py  telegram.py
api/models/: models.py
api/tests/: test_redis.py
landing/: index.html
velo_app/: DEVELOPMENT_GUIDE.md  README.md  pubspec.yaml
velo_app/android/app/: build.gradle.kts
velo_app/android/app/src/main/: AndroidManifest.xml
velo_app/ios/Runner/: Info.plist
velo_app/ios/Runner.xcodeproj/: project.pbxproj
velo_app/lib/: main.dart
velo_app/lib/core/: config.dart
velo_app/lib/core/network/: dio_client.dart  dio_client.g.dart
velo_app/lib/core/settings/: currency_provider.dart  currency_provider.g.dart  default_tab_provider.dart  default_tab_provider.g.dart  haptics_provider.dart  haptics_provider.g.dart
velo_app/lib/core/storage/: secure_storage.dart
velo_app/lib/core/theme/: app_theme.dart  theme_provider.dart  theme_provider.g.dart
velo_app/lib/features/auth/domain/: user.dart
velo_app/lib/features/auth/presentation/: server_setup_page.dart  sign_in_page.dart  (+1 more)
velo_app/lib/router/: app_router.dart
(+53 files in other folders)
