[project]
name = "velo-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ihor Savenko",email = "csigorek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "sentry-sdk (>=2.51.0,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "httpx (>=0.28.1,<0.29.0)",
    "flagsmith (>=5.1.1,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
